ui_tests/fn_calls_3.stderr
error: mismatched types: a:Tub[] b:Bar[]
   ┌─ main.box:11:9
   │
11 │     foo(new Tub {})
   │         ^^^^^^^^^^

