ui_tests/fn_calls_3.box
type Foo {}
type Bar {}

fn foo(a: Bar) -> Foo {
    new Foo {}
}

type Tub {}

fn bar() -> Foo {
    foo(new Tub {})
}